fix(CSS): Fix horizontal scroll "wiggle" on mobile

--- a/manager/manager/static/sass/styles.scss
+++ b/manager/manager/static/sass/styles.scss
@@ -121,6 +121,10 @@ $input-placeholder-color: $grey;
 // =============================================================================
 // Custom styles
 // =============================================================================
+body {
+  overflow-x: hidden;
+}
+
 @media screen and (max-width: $tablet) {
   // =============================================================================
   // Customize Bulma: below tablet breakpoint
